--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "sentilizer_api",
   "version": "1.0.0",
-  "description": "restful api json ",
+  "description": "A restful JSON API server.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "author": "Animesh",
+  "author": "Evans Boateng",
   "license": "ISC",
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0",
-    "hapi": "^18.1.0",
-    "nodemon": "^2.0.19",
-    "python-shell": "^3.0.1"
+    "@babel/polyfill": "^7.8.7",
+    "@hapi/hapi": "^19.1.1",
+    "python-shell": "^1.0.8",
+    "regenerator-runtime": "^0.13.5",
+    "util.promisify": "^1.0.1"
   },
   "devDependencies": {
-    "css-loader": "^6.7.1",
-    "style-loader": "^3.3.1"
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/register": "^7.8.6"
   }
 }
